Resolved redirection and color issue in dark mode
- Resolved redirection issue during plugin activation.
- Fixed footnote and highlight comment color issues in Dark mode

--- a/assets/scss/frontend_dark-mode.scss
+++ b/assets/scss/frontend_dark-mode.scss
@@ -168,4 +168,14 @@ body.body_dark {
 	body.body_dark textarea#comment {
 		background: #2c303a;
 	}
+
+	span.ezd_mark_text {
+		&.active{
+			color: black;
+		}
+	}
+	.ezd-footnotes-link-item span.ezd-footnote-content{
+		color:black
+	}
+
 }
